<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">学淘</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- login_activity -->
    <string name="login_et_account_hint">用户名</string>
    <string name="login_et_password_hint">密码</string>
    <string name="login_btn_regist">注  册</string>
    <string name="login_btn_login">登  入</string>
    <!-- regist_activity -->
    <string name="regist">注册</string>
    <string name="regist_et_account_hint">用户名</string>
    <string name="regist_et_email_hint">邮箱</string>
    <string name="regist_et_password_hint">密码</string>
    <string name="regist_et_password_hint_again">确认密码</string>
    <string name="regist_btn_regist">确认注册</string>

</resources>