<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_iv"
        android:gravity="center"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/login_rl_account"
            style="@style/login_tv_et_shape"
            android:layout_width="270dp"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center" >

            <ImageView
                android:id="@+id/login_iv_account"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/login_account_icon" />

            <EditText
                android:id="@+id/login_et_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/login_iv_account"
                android:background="@null"
                android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                android:ems="10"
                android:hint="@string/login_et_account_hint"
                android:singleLine="true" >
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/login_rl_password"
            style="@style/login_tv_et_shape"
            android:layout_width="270dp"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center" >

            <ImageView
                android:id="@+id/login_iv_password"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/login_password_icon" />

            <EditText
                android:id="@+id/login_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/login_iv_password"
                android:background="@null"
                android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                android:ems="10"
                android:hint="@string/login_et_password_hint"
                android:password="true"
                android:singleLine="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center" >

            <Button
                android:id="@+id/login_btn_regist"
                style="@style/add_btn_shape"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_marginRight="12dp"
                android:hint="@string/login_btn_regist"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/login_btn_login"
                style="@style/add_btn_shape"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/login_btn_regist"
                android:hint="@string/login_btn_login"
                android:textColorHint="@color/white" />
        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/login_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:layout_marginTop="70dp" />

</RelativeLayout>